--- a/themes/solitude/source/css/_mode/index.styl
+++ b/themes/solitude/source/css/_mode/index.styl
@@ -16,7 +16,7 @@
   --efu-reverse #fff
   --efu-maskbg rgba(0, 0, 0, 0.6)
   --efu-maskbgdeep rgba(0, 0, 0, 0.85)
-  --efu-hovertext #0a84ff
+  --efu-hovertext #cba6f7
   --efu-ahoverbg #fff
   --efu-lighttext var(--efu-theme)
   --efu-secondtext #a1a2b8
