--- a/themes/solitude/layout/includes/footer.pug
+++ b/themes/solitude/layout/includes/footer.pug
@@ -85,6 +85,6 @@ div#footer-bar
                     i.solitude.fa-solid.fa-copyright
                     i.solitude.fa-brands.fa-creative-commons-by
                     i.solitude.fa-brands.fa-creative-commons-nc
-                    i.solitude.fa-brands.fa-creative-commons-nd
+                    i.solitude.fa-brands.fa-creative-commons-sa
 if theme.comment.use && theme.comment.commentBarrage
     div.comment-barrage.needEndHide
